health/config/redis-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-premium-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  replicas: 3
  serviceName: redissvc
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend 
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - command: [sh, -c, source /redis-config/init.sh]
        image: redis:3.2.7-alpine
        name: redis
        ports: 
        - containerPort: 6379
        volumeMounts: 
        - mountPath: /redis-data
          name: data
        - mountPath: /redis-config
          name: config    
      - command: [sh, -c, source /redis-config/sentinel.sh]
        image: redis:3.2.7-alpine
        name: sentinel
        volumeMounts: 
        - mountPath: /redis-data
          name: data
        - mountPath: /redis-config
          name: config          
      volumes: 
      - configMap: 
          defaultMode: 420
          name: redis-config
        name: config
      - name: redis-data
        persistentVolumeClaim:
           claimName: redis-pv-claim
