health/config/premium.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: master
    tier: backend
  name: redissvc
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-premium-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  replicas: 3
  serviceName: redissvc
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend 
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - command: [sh, -c, source /redis-config/init.sh]
        image: redis:3.2.7-alpine
        name: redis
        ports: 
        - containerPort: 6379
        volumeMounts: 
        - mountPath: /redis-data
          name: data
        - mountPath: /redis-config
          name: config    
      - command: [sh, -c, source /redis-config/sentinel.sh]
        image: redis:3.2.7-alpine
        name: sentinel
        ports:
        - containerPort: 26379
        volumeMounts: 
        - mountPath: /redis-data
          name: data
        - mountPath: /redis-config
          name: config          
      volumes: 
      - configMap: 
          defaultMode: 420
          name: redis-config
        name: config
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.alpha.kubernetes.io/storage-class: default
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: premium
    role: business
    type: backend
  name: premiumcalc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: premium
      role: business
      type: backend
  template:
    metadata:
      labels:
        app: premium
        role: business
        type: backend
    spec:
      containers:
      - image: bikertales/premiumcalc:v1
        name: premiumcalc
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: premium
    role: business
    type: backend
  name: premiumcalc-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: premium
    role: business
    type: backend
