health/config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: premiumcalc-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/healths/premiums
        backend:
          serviceName: premiumcalc-svc
          servicePort: 8000
